# chaos-renderer

./: README.md  chaos-renderer.cabal  hie.yaml  stack.yaml
app/: Main.hs
src/: Interpolation.hs  Julia.hs  Mandlebrot.hs
test/: InterpolationSpec.hs
