name:                chaos-renderer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chezbgone/chaos-renderer
license:             MIT
license-file:        LICENSE
author:              Jason Chen
maintainer:          chezbgone@gmail.com
copyright:           2020 Jason Chen
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chaos-renderer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
