name:                chaos-renderer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chezbgone/chaos-renderer
license:             MIT
license-file:        LICENSE
author:              Jason Chen
maintainer:          chezbgone@gmail.com
copyright:           2020 Jason Chen
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Interpolation
    , Julia
    , Mandlebrot
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , JuicyPixels

executable chaos-renderer
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , chaos-renderer
    , JuicyPixels
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

test-suite interpolation-test
  type: exitcode-stdio-1.0
  main-is: InterpolationSpec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >=4.7 && <5
    , chaos-renderer
    , ieee754
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
  default-language: Haskell2010
